# sours

./: Cargo.toml  LICENSE  LICENSE-MIT  readme.md  sours.json
src/: audio_player.rs  audio_resource.rs  lib.rs  main.rs  options.rs  platform_media_controls.rs  winapi_.rs  ytdlp.rs
