[package]
name = "sours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
lofty = "0.18.2"
rand = "0.8.5"
rfd = "0.14.1"
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
souvlaki = "0.7.3"
windows = { version = "0.54.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Media",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Storage_Streams",
] }
